--- a/2DWaterPlane/assets/Help.html
+++ b/2DWaterPlane/assets/Help.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Waterplane Help</title>
+    <title>Waterplane Help</title>
 </head>
 <body>
 
 <h1>Help</h1>
+<h2><a href="intro-url">Intro Screen</a></h2>
 <h2>About the app</h2>
 <p>The purpose of this app is to provide a visualization of DEM files loaded on your SD card. If there are none, a sample file will be loaded. A slider at the bottom lets you set the elevation, below which everything will be shaded in. This is handy for quickly finding the lowest and highest points in an area.</p>
 <h2><a href="HowtoloadDEMs.html">How to get DEMs</a></h2>
