added color legend to help page

--- a/2DWaterPlane/assets/Help.html
+++ b/2DWaterPlane/assets/Help.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Waterplane Help</title>
+	<meta name="viewport" content="width=device-width, user-scalable=no" />
 </head>
 <body>
 
@@ -18,7 +19,7 @@
 <p>When this mode is enabled the water level will be set to match your current elevation. </p>
 <h2>Drawing Modes</h2>
 <p>The DEM can be displayed as all blue or with a color gradient, with optional transparency for both. The transparency level can be adjusted in the settings menu.</p>
-
-
+<img src="gradient.png" width="320" />
+<p>Color legend</p>
 </body>
 </html> 
